feat(admin,miniprogram,server,rerank): 看板重构与布局收敛，C端启动页与重排GPU
- B端：统一收敛到 AppLayout 布局骨架（侧边栏+顶栏+内容区），侧边栏接入暖色 token；数据看板接真实 API（KPI 含环比 / 周月季趋势 / 完成率 / 损坏三态 / 互助排行）
- C端：新增 boot 启动页做冷启动会话恢复与路由分发（消除登录页闪现）；发布页草稿预填增强（时长单位/取货方式/紧急标记），constants 新增 DURATION_UNIT/PICKUP_METHOD
- 重排：GPU 优先批量推理（RTX3060 透传），torch 改主机预下载 wheel 离线安装（避免容器内慢速拉取）
- 后端：看板统计 DTO 重构对齐前端；敏感词缩写需独立成词防误拦（usb/cmd）；Agent 兜底文案外置 prompts/agent/replies.md（改文案不动代码）
- .gitignore 忽略 rerank-service/wheels/；清理 sim*.js 调试脚本与 clock-icon-yellow.svg 孤儿资源